--- a/ballot_box_web/app/views/layouts/application.html.erb
+++ b/ballot_box_web/app/views/layouts/application.html.erb
@@ -1,14 +1,54 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>BallotBoxWeb</title>
+  <title>BallotBox</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
+    <div class="navbar navbar-default navbar-fixed-top" role="navigation">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#">BallotBox</a>
+            </div>
+            <div class="navbar-collapse collapse">
+                <ul class="nav navbar-nav">
+                    <li class="active"><%= link_to 'Home', root_path %></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <% if user_signed_in? %>
+                        <li><%= link_to current_user.email, edit_user_registration_path, :class => 'navbar-link' %></li>
+                        <li><%= link_to 'Logout', destroy_user_session_path, method: :delete %></li>
+                    <% else %>
+                        <li><%= link_to 'Sign Up', new_user_registration_path %></li>
+                        <li><%= link_to 'Login', new_user_session_path %></li>
+                    <% end %>
+                </ul>
+            </div>
+        </div>
+    </div>
 
-<%= yield %>
+<% if notice %>
+    <p class="alert alert-success"><%= notice %></p>
+<% end %>
+<% if alert %>
+    <p class="alert alert-danger"><%= alert %></p>
+<% end %>
 
+<div class="container">
+    <%= yield %>
+</div>
+
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script> 
 </body>
 </html>
