--- a/ballot_box_web/app/assets/stylesheets/application.css
+++ b/ballot_box_web/app/assets/stylesheets/application.css
@@ -14,7 +14,39 @@
  *= require_self
  */
 
+html {
+    position: relative;
+    min-height: 100%;
+}
+
 body {
-    min-height: 2000px;
+    min-height: 200px;
     padding-top: 70px;
+    margin-bottom: 60px;
+}
+
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+    background-color: #f5f5f5;
+}
+
+body > .container {
+    padding: 60px 15px 0;
+}
+
+.container .text-muted {
+    margin: 20px 0;
+    text-align: center;
+}
+
+.footer > .container {
+    padding-right: 15px;
+    padding-left: 15px;
+}
+
+code {
+    font-size: 80%;
 }
