--- a/ballot_box_web/app/views/elections/show.html.erb
+++ b/ballot_box_web/app/views/elections/show.html.erb
@@ -6,5 +6,11 @@
     <strong>Text:</strong>
     <%= @election.text %>
 </p>
+<% for choice in @choices %>
+    <p>
+        <strong>Choice:</strong>
+        <%= choice.body %>
+    </p>
+<% end %>
 
 <%= link_to 'Back', elections_path %>
