Add public/private attribute to votes

--- a/ballot_box_web/app/views/elections/new.html.erb
+++ b/ballot_box_web/app/views/elections/new.html.erb
@@ -26,6 +26,11 @@
         <%= f.text_area :text %>
     </div>
 
+    <div>
+        <%= f.label :private %><br />
+        <%= f.check_box :private %>
+    </div>
+
     <h2>Choices</h2>
     <%= f.fields_for :choices do |ff| %>
         <div>
