--- a/ballot_box_web/app/views/elections/show.html.erb
+++ b/ballot_box_web/app/views/elections/show.html.erb
@@ -20,6 +20,7 @@
                 <%= choice.body %>
                 <% if current_user && !choice.has_evaluation?(:votes, current_user) %>
                     | <%= link_to "Vote for this!", vote_election_choice_path(election_id: choice.election_id, id: choice.id, type: "up"), method: "post" %>
+                <% else %>
                     | <%= link_to "Cancel vote", vote_election_choice_path(election_id: choice.election_id, id: choice.id, type: "down"), method: "post" %>
                 <% end %>
             </p>
